@YELP_HELP_RULES@

HELP_ID = mate-disk-usage-analyzer
HELP_FILES = index.docbook legal.xml

HELP_LINGUAS = ca cs da de el en_GB es eu fi fr it oc pl ru sv uk zh_CN zh_HK zh_TW

HELP_MEDIA =                       \
	figures/baobab_fullscan.png    \
	figures/baobab_prefs.png       \
	figures/baobab_remote.png      \
	figures/baobab_ringschart1.png \
	figures/baobab_ringschart2.png \
	figures/baobab_treemaps.png    \
	figures/baobab_window.png
